# X-Booking

./: .env.example  .gitignore  PHASE_5.5_IMPLEMENTATION.md  README.md  TODO.md  main.py  package.json  pyproject.toml  run.bat  run.sh
docs/: README.md
docs/research/: ARCHITECTURE_DECISION.md  AUTH_TOKEN_DISCOVERY.md  BOOKING_CLIENT.md  FIND_API_ENDPOINTS.md  IMPLEMENTATION_STATUS.md  MANUAL_ANALYSIS_GUIDE.md  MULTIBOOKING_PLAN.md  TESTING.md
src/api/: booking_api.py
src/app/: page.tsx
src/app/api/accounts/: route.ts
src/app/api/accounts/[id]/: route.ts
src/app/api/accounts/[id]/bookings/: route.ts
src/app/api/accounts/[id]/stats/: route.ts
src/app/api/book/: route.ts
src/app/api/bookings/: route.ts
src/app/api/bookings/[id]/: route.ts
src/app/api/slots/: route.ts
src/app/api/slots/monitor/: route.ts
src/app/api/slots/refresh/: route.ts
src/components/: AccountStats.tsx  AccountSwitcher.tsx  BookingHistory.tsx  EnhancedCalendar.tsx  EnhancedRetryInterval.tsx  EnhancedTimeSelector.tsx  LocationSelector.tsx  SlotGrid.tsx  TimeSelector.tsx
src/services/: __init__.py  booking_client.py  booking_service.py  database.py  slot_monitor.py
